hord-team/hord-orders-webapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hord-orders-webapi
spec:
  replicas: 1
  selector:
      matchLabels:
        pod: hord-orders-webapi-label
  template:
      metadata:
        labels:
          pod: hord-orders-webapi-label
      spec:
        containers:
        - name: hord-orders-webapi-container
          image: mholym/orders-webapi:1.0.0-30
          imagePullPolicy: Always
          ports:
          - name: webapi-port
            containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
