hord-team/hord-orders-webapi/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hord-orders-webapi
spec:
  type: ClusterIP
  selector:
    pod: hord-orders-webapi-label
  ports:
  - name: webapi-s-port
    protocol: TCP
    port: 80
    targetPort: 8080
